--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -71,7 +71,7 @@
                     <div class="col-md-4 form-group" >
                     <small id="dateHelp" class="form-text text-muted">City:</small>                      
                     <select id="inputCity" class="form-control">
-                      <option selected>Choose...</option>
+                      <option selected>ALL</option>
                     </select>                    
                     </div>
                   </div>
@@ -79,17 +79,17 @@
                     <div class="col-md-3 form-group" >
                     <small id="dateHelp" class="form-text text-muted">State:</small>                      
                     <select id="inputState" class="form-control">
-                      <option selected>Choose...</option>
+                      <option selected>ALL</option>
                     </select>                    </div>
                     <div class="col-md-3 form-group" >
                     <small id="dateHelp" class="form-text text-muted">Country:</small>                      
                     <select id="inputCountry" class="form-control">
-                      <option selected>Choose...</option>
+                      <option selected>ALL</option>
                     </select>                    </div>                  
                     <div class="col-md-3 form-group" >
                     <small id="dateHelp" class="form-text text-muted">Shape:</small>                      
                     <select id="inputShape" class="form-control">
-                      <option selected>Choose...</option>
+                      <option selected>ALL</option>
                     </select>                    </div>
 
                     <div class="col-md-2">
