fixing filter in level3 and adding menu

--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -123,7 +123,24 @@
       </div>
     </div>
     <footer class="footer" style="background-color: black;">
-      <span class="bottom"style="background-color: black;" >UFO Sightings</span>
+      <div class="container"></div>
+      <div class="row">
+          <div class="container col-md-2" >
+          <span class="bottom"style="background-color: black;" >UFO Sightings</span>
+          </div>
+          <div class="container col-md-3" >
+              <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-1/index.html'" style="padding: 5px 40%" >Level 1</button>
+          </div>
+          <div class="container col-md-3">
+            <button id="level2" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-2/index.html'" style="padding: 5px 40%" >Level 2</button>
+          </div>    
+          <div class="container col-md-3">
+            <button id="level3" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-3/index.html'" style="padding: 5px 40%" >Level 3</button>
+          </div>
+      
+      </div>
+      </div>
+
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
