--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -99,7 +99,24 @@
       </div>
     </div>
     <footer class="footer" style="background-color: black;">
-      <span class="bottom"style="background-color: black;" >UFO Sightings</span>
+      <div class="container"></div>
+      <div class="row">
+        <div class="container col-md-3" >
+          <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='../index.html'" style="padding: 5px 40%" >Home</button>
+      </div>
+          <div class="container col-md-3" >
+              <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='index.html'" style="padding: 5px 40%" >Level1</button>
+          </div>
+          <div class="container col-md-3">
+            <button id="level2" type="button" class="btn btn-secondary" onclick="location.href='../UFO-level-2/index.html'" style="padding: 5px 40%" >Level2</button>
+          </div>    
+          <div class="container col-md-3">
+            <button id="level3" type="button" class="btn btn-secondary" onclick="location.href='../UFO-level-3/index.html'" style="padding: 5px 40%" >Level3</button>
+          </div>
+      
+      </div>
+      </div>
+
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
