--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -69,7 +69,7 @@
                     <input class="form-control" type="text" name="datepicker" id="To_datepicker" placeholder="1/13/2010" value="1/13/2010"/>
                     </div>
 
-                    <div class="col-md-3 form-group" >
+                    <div class="col-md-4 form-group" >
                       <small id="dateHelp" class="form-text text-muted">Country:</small>                      
                       <select id="inputCountry" class="form-control">
                         <option selected>ALL</option>
@@ -125,17 +125,17 @@
     <footer class="footer" style="background-color: black;">
       <div class="container"></div>
       <div class="row">
-          <div class="container col-md-2" >
-          <span class="bottom"style="background-color: black;" >UFO Sightings</span>
-          </div>
+        <div class="container col-md-3" >
+          <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='../index.html'" style="padding: 5px 40%" >Home</button>
+      </div>
           <div class="container col-md-3" >
-              <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-1/index.html'" style="padding: 5px 40%" >Level 1</button>
+              <button id="level1" type="button" class="btn btn-secondary" onclick="location.href='../UFO-level-1/index.html'" style="padding: 5px 40%" >Level1</button>
           </div>
           <div class="container col-md-3">
-            <button id="level2" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-2/index.html'" style="padding: 5px 40%" >Level 2</button>
+            <button id="level2" type="button" class="btn btn-secondary" onclick="location.href='index.html'" style="padding: 5px 40%" >Level2</button>
           </div>    
           <div class="container col-md-3">
-            <button id="level3" type="button" class="btn btn-secondary" onclick="location.href='UFO-level-3/index.html'" style="padding: 5px 40%" >Level 3</button>
+            <button id="level3" type="button" class="btn btn-secondary" onclick="location.href='../UFO-level-3/index.html'" style="padding: 5px 40%" >Level3</button>
           </div>
       
       </div>
